# learn-python

basic/: error_handle.py  variable.py
basic/collections/: dict.py  iterable.py  list.py  set.py  tuple.py
basic/control_flow/: branch.py  loop.py
basic/file/: pyproject.toml
basic/function/: function.py  generator.py
basic/meta/: decorator.py  metaclass.py  reflect.py
basic/network/: pyproject.toml
basic/note/: asynchronous.md  comprehension.md  context_management.md  data_class.md  env_var.md  json_serialization.md  modularity.md  type_validation.md  uv_and_pip.md  virtual_env_and_config_file.md
basic/oop/: class.py  (+3 more)
web_dev/fastapi/simply-social-media-app/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  compose.yaml  pyproject.toml
web_dev/fastapi/simply-social-media-app/alembic/: env.py
web_dev/fastapi/simply-social-media-app/alembic/versions/: 0001_initial_schema.py
web_dev/fastapi/simply-social-media-app/app/: main.py
web_dev/fastapi/simply-social-media-app/app/api/: deps.py  router.py
web_dev/fastapi/simply-social-media-app/app/api/routes/: __init__.py  auth.py  posts.py  users.py  votes.py
web_dev/fastapi/simply-social-media-app/app/core/: config.py  security.py
web_dev/fastapi/simply-social-media-app/app/db/: __init__.py  models.py  session.py
web_dev/fastapi/simply-social-media-app/app/schemas/: __init__.py  auth.py  post.py  user.py  vote.py
web_dev/fastapi/simply-social-media-app/nginx/: default.conf
web_dev/fastapi/simply-social-media-app/tests/: conftest.py  test_posts.py  test_users.py  test_votes.py
(+8 files in other folders)
